:memo: add report and checked validation

--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
             guides, and meal plans, drawing over 15 million readers each month from around the world." />
     <meta property="og:site_name" content="Foodies" />
-    <meta property="og:image" content=" サムネイル画像の URL" />
+    <meta property="og:image" content="images/ogp.png" />
     <title>Foodies - Thai Red Curry -</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
@@ -23,9 +23,7 @@
 </head>
 <body>
 <header class="header_recipes_detail">
-    <!------------------------
-        Header
-    -------------------------->
+    <!-- Header -->
     <div class="header_box">
         <h1 class="header_title"><a href="./" id="title-color">Foodies</a></h1>
         <!-- pc header menu -->
@@ -70,9 +68,7 @@
     <h2 class="header_main_title sub_menu_title">Thai Red Curry</h2>
 </header>
 <main class="wrapper">
-    <!------------------------
-        Ingredients
-    -------------------------->
+    <!-- Ingredients -->
     <section class="contents_ingredients">
         <h3 class="contents_title recipes_detail_title">Ingredients</h3>
         <dl class="contents_ingredients_box">
@@ -103,9 +99,7 @@
             </dd>
         </dl>
     </section>
-    <!------------------------
-        Instructions
-    -------------------------->
+    <!-- Instructions -->
     <section class="contents_instructions">
         <h3 class="contents_title recipes_detail_title">Instructions</h3>
         <ol class="contents_instructions_list">
@@ -132,9 +126,7 @@
     </section>
 </main>
 <footer>
-    <!------------------------
-        footer
-    -------------------------->
+    <!-- footer -->
     <div class="footer_box">
         <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
