--- a/about_us.html
+++ b/about_us.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
             guides, and meal plans, drawing over 15 million readers each month from around the world." />
     <meta property="og:site_name" content="Foodies" />
-    <meta property="og:image" content=" サムネイル画像の URL" />
+    <meta property="og:image" content="images/ogp.png" />
     <title>Foodies - About Us -</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
@@ -23,9 +23,7 @@
 </head>
 <body>
 <header class="header_about_us">
-    <!------------------------
-        Header
-    -------------------------->
+    <!-- Header -->
     <div class="header_box">
         <h1 class="header_title"><a href="./" id="title-color">Foodies</a></h1>
         <!-- pc header menu -->
@@ -70,9 +68,7 @@
     <h2 class="header_main_title sub_menu_title">About Us</h2>
 </header>
 <main>
-    <!------------------------
-        About Us
-    -------------------------->
+    <!-- About Us -->
     <section class="contents_box">
         <div class="contents_des_box about_us_des_box">
             <h3 class="contents_title">About Us</h3>
@@ -90,9 +86,7 @@
         </div>
         <div class="contents_img_box about_us_img_box"><img src="images/about_us_img.png" alt="About Us"></div>
     </section>
-    <!------------------------
-        Our History
-    -------------------------->
+    <!-- Our History -->
     <section class="contents_box">
         <div class="contents_img_box"><img src="images/our_history_img.png" alt="Our History"></div>
         <div class="contents_des_box our_history_des_box">
@@ -106,9 +100,7 @@
     </section>
 </main>
 <footer>
-    <!------------------------
-        footer
-    -------------------------->
+    <!-- footer -->
     <div class="footer_box">
         <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
