--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
             guides, and meal plans, drawing over 15 million readers each month from around the world." />
     <meta property="og:site_name" content="Foodies" />
-    <meta property="og:image" content=" サムネイル画像の URL" />
+    <meta property="og:image" content="images/ogp.png" />
     <title>Foodies - Contact -</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
@@ -24,9 +24,7 @@
 </head>
 <body>
 <header class="header_contact">
-    <!------------------------
-        Header
-    -------------------------->
+    <!-- Header -->
     <div class="header_box">
         <h1 class="header_title"><a href="./" id="title-color">Foodies</a></h1>
         <!-- pc header menu -->
@@ -71,9 +69,7 @@
     <h2 class="header_main_title sub_menu_title">Contact</h2>
 </header>
 <main class="contents_box">
-    <!------------------------
-        Contact
-    -------------------------->
+    <!-- Contact -->
     <h3 class="contents_title">Contact</h3>
     <p class="contents_text">Have something you’d like to let us know?</p>
     <p class="contents_text">Whether you have a comment on a recipe or an idea to share, we would love to hear from
@@ -111,9 +107,7 @@
     </div>
 </main>
 <footer>
-    <!------------------------
-        footer
-    -------------------------->
+    <!-- footer -->
     <div class="footer_box">
         <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
