--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
             guides, and meal plans, drawing over 15 million readers each month from around the world."/>
     <meta property="og:site_name" content="Foodies"/>
-    <meta property="og:image" content=" サムネイル画像の URL"/>
+    <meta property="og:image" content="images/ogp.png"/>
     <title>Foodies - What's on the menu today? -</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
@@ -26,9 +26,7 @@
 </head>
 <body>
 <header class="header_index">
-    <!------------------------
-        Header
-    -------------------------->
+    <!--Header-->
     <div class="header_box">
         <h1 class="header_title"><a href="./" id="title-color">Foodies</a></h1>
         <!-- pc header menu -->
@@ -74,9 +72,7 @@
     <div class="header_main_button"><a href="recipes.html">Find a recipe</a></div>
 </header>
 <main>
-    <!------------------------
-        Welcome
-    -------------------------->
+    <!-- Welcome -->
     <section class="contents_box">
         <h3 class="contents_title index_contents_title fade-in fade-in-up">Welcome</h3>
         <p class="contents_text">Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
@@ -85,9 +81,7 @@
             testers, photographers, and other creative professionals.</p>
         <p class="contents_text_link"><a href="about_us.html">Learn More...</a></p>
     </section>
-    <!------------------------
-        Recipe List
-    -------------------------->
+    <!-- Recipe List -->
     <section class="contents_box">
         <h3 class="contents_title index_contents_title fade-in fade-in-up">Newest Recipes</h3>
         <ul class="recipe_list">
@@ -208,9 +202,7 @@
     </section>
 </main>
 <footer>
-    <!------------------------
-        footer
-    -------------------------->
+    <!-- footer -->
     <div class="footer_box">
         <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
