--- a/recipes.html
+++ b/recipes.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
             guides, and meal plans, drawing over 15 million readers each month from around the world."/>
     <meta property="og:site_name" content="Foodies"/>
-    <meta property="og:image" content=" サムネイル画像の URL"/>
+    <meta property="og:image" content="images/ogp.png"/>
     <title>Foodies - Recipes -</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
@@ -25,9 +25,7 @@
 </head>
 <body>
 <header class="header_recipes">
-    <!------------------------
-        Header
-    -------------------------->
+    <!-- Header -->
     <div class="header_box">
         <h1 class="header_title"><a href="./" id="title-color">Foodies</a></h1>
         <!-- pc header menu -->
@@ -72,10 +70,8 @@
     <h2 class="header_main_title sub_menu_title">Recipes</h2>
 </header>
 <main>
-    <!------------------------
-        Carousel
-    -------------------------->
-    <section class="contents_box carousel_box">
+    <!-- Carousel -->
+    <div class="contents_box carousel_box">
         <div class="splide">
             <div class="splide__track">
                 <ul class="splide__list">
@@ -106,10 +102,8 @@
                 </ul>
             </div>
         </div>
-    </section>
-    <!------------------------
-        Recipe List
-    -------------------------->
+    </div>
+    <!-- Recipe List -->
     <section class="contents_box">
         <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
         <ul class="recipe_list">
@@ -296,9 +290,7 @@
     </section>
 </main>
 <footer>
-    <!------------------------
-        footer
-    -------------------------->
+    <!-- footer -->
     <div class="footer_box">
         <h2 class="footer_title"><a href="./">Foodies</a></h2>
         <div class="footer_link_box">
