:memo: changed text

--- a/about_us.html
+++ b/about_us.html
@@ -75,9 +75,8 @@
             <p class="contents_text">Foodies is here to help you cook delicious meals with less stress and more joy. We
                 offer recipes and cooking
                 advice for home cooks, by home cooks. Helping create “kitchen wins” is what we’re all about.</p>
-            <p class="contents_text">Foodies was founded in 2003 by Elise Bauer as a home cooking blog to record her
-                favorite family recipes.
-                Today, Simply Recipes has grown into a trusted resource for home cooks with more than 3,000 tested
+            <p class="contents_text">Foodies was founded in 2003 as a home cooking blog to record favorite recipes.
+                Today, Foodies has grown into a trusted resource for home cooks with more than 3,000 tested
                 recipes,
                 guides, and meal plans, drawing over 15 million readers each month from around the world. We’re
                 supported by
@@ -91,11 +90,7 @@
         <div class="contents_img_box"><img src="images/our_history_img.png" alt="Our History"></div>
         <div class="contents_des_box our_history_des_box">
             <h3 class="contents_title">Our History</h3>
-            <p class="contents_text">Elise Bauer was a busy Silicon Valley executive when she became sick with a flu
-                that wouldn’t go away in 2001. In 2003, Elise moved home with her parents and lived with them for
-                several years, recovering from chronic fatigue and documenting her parents’ cooking on Simply Recipes.
-                Over the years, what started as a small blog grew to reach millions of readers every month! In 2020,
-                Foodies was acquired by Dotdash, a New York-based media company.</p>
+            <p class="contents_text">I was raised by my grandmother ever since I was a small child. So even now, as an adult, I still love my grandmother's cooking. I started cooking when I was about 25 years old. At that time, I realized that in order to have a healthy and beautiful body, it is important to eat every day. I began to think that I wanted to eat healthy, low-calorie, vegetable-based meals that tasted good, and I started to actively cook for myself. As my grandmother gradually got older, it became more and more difficult for her to stand in the kitchen, so I took the opportunity to do so. The fact that my grandmother enjoyed eating my cooking is now a cherished memory. </p>
         </div>
     </section>
 </main>
