:sparkles: add hover effect

--- a/recipes.html
+++ b/recipes.html
@@ -111,12 +111,99 @@
                 <a href="recipe_detail.html">
                     <dl>
                         <dt class="recipe_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
-                        <dt class="recipe_category">Asian Food</dt>
+                        <dt class="recipe_category">Asian</dt>
                         <dt class="recipe_title">Thai Red Curry</dt>
                         <dd class="recipe_des">
                             Forget ordering takeaway and make your own Thai red curry at home. This classic dish takes
                             just 15 minutes to
                             prep and it's bursting with flavour.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe11.png"
+                                                      alt="Minestrone Soup"></dt>
+                        <dt class="recipe_category">Soup</dt>
+                        <dt class="recipe_title">Minestrone Soup</dt>
+                        <dd class="recipe_des">
+                            Minestrone is a hearty Italian vegetable soup made with tomato-y broth and pasta or rice.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
+                                                      alt="Salmon with Creamy Spinachi"></dt>
+                        <dt class="recipe_category">Seafood</dt>
+                        <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
+                        <dd class="recipe_des">
+                            This pan seared salmon with creamy spinach recipe is so delicious your entire family will
+                            fall
+                            in love.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
+                        </dt>
+                        <dt class="recipe_category">Chicken</dt>
+                        <dt class="recipe_title">Baked Chicken Wings</dt>
+                        <dd class="recipe_des">
+                            Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
+                            consisting of paprika, garlic, salt and pepper.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+        </ul>
+    </section>
+    <section class="contents_box">
+        <h3 class="contents_title recipes_contents_title">Tasty Desserts Of All Time</h3>
+        <ul class="recipe_list">
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe9.png"
+                                                      alt="Homemade Brownies"></dt>
+                        <dt class="recipe_category">Sweets</dt>
+                        <dt class="recipe_title">Homemade Brownies</dt>
+                        <dd class="recipe_des">
+                            The BEST brownie recipe! With crispy edges, fudgy middles, and rich chocolate flavor, these homemade brownies will disappear in no time.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe10.png" alt="Frosted Doughnuts">
+                        </dt>
+                        <dt class="recipe_category">Sweets</dt>
+                        <dt class="recipe_title">Frosted Doughnuts</dt>
+                        <dd class="recipe_des">
+                            For doughnut success, follow my step-by-step photos, helpful success tips, and foolproof recipe.
+                        </dd>
+                    </dl>
+                </a>
+            </li>
+            <li>
+                <a href="recipe_detail.html">
+                    <dl>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
+                        <dt class="recipe_category">Sweets</dt>
+                        <dt class="recipe_title">Apple Pie</dt>
+                        <dd class="recipe_des">
+                            This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery
+                            crust
+                            and a tender, lightly-spiced apple pie filling.
                         </dd>
                     </dl>
                 </a>
@@ -135,95 +222,6 @@
                     </dl>
                 </a>
             </li>
-            <li>
-                <a href="recipe_detail.html">
-                    <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe3.png" alt="Bolognese"></dt>
-                        <dt class="recipe_category">Pasta</dt>
-                        <dt class="recipe_title">Bolognese</dt>
-                        <dd class="recipe_des">
-                            Hearty and comforting, this meaty, easy bolognese sauce recipe takes less time to make than
-                            it
-                            does to disappear into hungry tummies.
-                        </dd>
-                    </dl>
-                </a>
-            </li>
-            <li>
-                <a href="recipe_detail.html">
-                    <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe4.png" alt="Best Humburger"></dt>
-                        <dt class="recipe_category">Fast Food</dt>
-                        <dt class="recipe_title">Best Humburger</dt>
-                        <dd class="recipe_des">
-                            Best Hamburger Patty Recipe – Thick or thin, made on the grill or stovetop, this is the best
-                            recipe for perfect hamburger patties every time!
-                        </dd>
-                    </dl>
-                </a>
-            </li>
-        </ul>
-    </section>
-    <section class="contents_box">
-        <h3 class="contents_title recipes_contents_title">Tasty Desserts Of All Time</h3>
-        <ul class="recipe_list">
-            <li>
-                <a href="recipe_detail.html">
-                    <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
-                                                      alt="Salmon with Creamy Spinachi"></dt>
-                        <dt class="recipe_category">Seafood</dt>
-                        <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
-                        <dd class="recipe_des">
-                            This pan seared salmon with creamy spinach recipe is so delicious your entire family will
-                            fall
-                            in love.
-                        </dd>
-                    </dl>
-                </a>
-            </li>
-            <li>
-                <a href="recipe_detail.html">
-                    <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
-                        </dt>
-                        <dt class="recipe_category">Chicken</dt>
-                        <dt class="recipe_title">Baked Chicken Wings</dt>
-                        <dd class="recipe_des">
-                            Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
-                            consisting of paprika, garlic, salt and pepper.
-                        </dd>
-                    </dl>
-                </a>
-            </li>
-            <li>
-                <a href="recipe_detail.html">
-                    <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
-                        <dt class="recipe_category">Fast Food</dt>
-                        <dt class="recipe_title">Margherita Pizza</dt>
-                        <dd class="recipe_des">
-                            This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a
-                            flavor-popping
-                            pizza sauce and perfectly chewy pizza crust.
-                        </dd>
-                    </dl>
-                </a>
-            </li>
-            <li>
-                <a href="recipe_detail.html">
-                    <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
-                        <dt class="recipe_category">Sweets</dt>
-                        <dt class="recipe_title">Apple Pie</dt>
-                        <dd class="recipe_des">
-                            This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery
-                            crust
-                            and a tender, lightly-spiced apple pie filling.
-                        </dd>
-                    </dl>
-                </a>
-            </li>
         </ul>
     </section>
     <section class="contents_box">
@@ -232,14 +230,12 @@
             <li>
                 <a href="recipe_detail.html">
                     <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
-                                                      alt="Salmon with Creamy Spinachi"></dt>
-                        <dt class="recipe_category">Seafood</dt>
-                        <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe12.png"
+                                                      alt="Easy Fried Rice"></dt>
+                        <dt class="recipe_category">Asian</dt>
+                        <dt class="recipe_title">Easy Fried Rice</dt>
                         <dd class="recipe_des">
-                            This pan seared salmon with creamy spinach recipe is so delicious your entire family will
-                            fall
-                            in love.
+                            Even kids will love this quick and easy fried rice, perfect for a weeknight meal.
                         </dd>
                     </dl>
                 </a>
@@ -247,13 +243,12 @@
             <li>
                 <a href="recipe_detail.html">
                     <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe6.png" alt="Baked Chicken Wings">
+                        <dt class="recipe_image"><img src="./images/recipes/recipe13.png" alt="Avocado Toast">
                         </dt>
-                        <dt class="recipe_category">Chicken</dt>
-                        <dt class="recipe_title">Baked Chicken Wings</dt>
+                        <dt class="recipe_category">Toast</dt>
+                        <dt class="recipe_title">Avocado Toast</dt>
                         <dd class="recipe_des">
-                            Chicken Wings are a game day staple! This baked wings recipe has the most amazing seasoning
-                            consisting of paprika, garlic, salt and pepper.
+                            Creamy avocado spread onto well-toasted bread is one of my favorite quick meals.
                         </dd>
                     </dl>
                 </a>
@@ -261,13 +256,11 @@
             <li>
                 <a href="recipe_detail.html">
                     <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe7.png" alt="Margherita Pizza"></dt>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe14.png" alt="Macaroni and Cheese"></dt>
                         <dt class="recipe_category">Fast Food</dt>
-                        <dt class="recipe_title">Margherita Pizza</dt>
+                        <dt class="recipe_title">Macaroni and Cheese</dt>
                         <dd class="recipe_des">
-                            This margherita pizza recipe tastes like a woodfired pie from Italy! It stars a
-                            flavor-popping
-                            pizza sauce and perfectly chewy pizza crust.
+                            Quick, easy, and tasty macaroni and cheese dish. This baked mac and cheese is a family favorite recipe, loved by both children and adults.
                         </dd>
                     </dl>
                 </a>
@@ -275,13 +268,11 @@
             <li>
                 <a href="recipe_detail.html">
                     <dl>
-                        <dt class="recipe_image"><img src="./images/recipes/recipe8.png" alt="Apple Pie"></dt>
-                        <dt class="recipe_category">Sweets</dt>
-                        <dt class="recipe_title">Apple Pie</dt>
+                        <dt class="recipe_image"><img src="./images/recipes/recipe15.png" alt="Easy Classic Lasagne"></dt>
+                        <dt class="recipe_category">Italian</dt>
+                        <dt class="recipe_title">Easy Classic Lasagne</dt>
                         <dd class="recipe_des">
-                            This is absolutely the best homemade apple pie you'll ever make! It has a flaky, buttery
-                            crust
-                            and a tender, lightly-spiced apple pie filling.
+                            Kids will love to help assemble this easiest ever pasta bake with streaky bacon, beef mince, a crème fraîche sauce and gooey mozzarella
                         </dd>
                     </dl>
                 </a>
