--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <a href="recipe_detail.html">
                     <dl>
                         <dt class="recipe_image"><img src="./images/recipes/recipe1.png" alt="Thai Red Curry"></dt>
-                        <dt class="recipe_category">Asian Food</dt>
+                        <dt class="recipe_category">Asian</dt>
                         <dt class="recipe_title">Thai Red Curry</dt>
                         <dd class="recipe_des">
                             Forget ordering takeaway and make your own Thai red curry at home. This classic dish takes
